depth map projection into 3d works to put it into the reference scan!!!!!

--- a/sceneGraph_update/depth_map_computations/r3scan_depthmap.ipynb
+++ b/sceneGraph_update/depth_map_computations/r3scan_depthmap.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "/local/home/ekoller/BT\n"
      ]
     }
@@ -61,6 +64,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gt_patches \n",
+      "(540, 960)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reconstruct_to_image( patchwise_id):\n",
+    "        patch_width = 30\n",
+    "        patch_height = 30\n",
+    "        \n",
+    "        # Initialize an empty image with zeros (assuming same type as original)\n",
+    "        reconstructed_img = np.zeros((540, 960), dtype=np.int32)\n",
+    "        \n",
+    "        # Loop over patches and place the patchwise_id values into the reconstructed image\n",
+    "        for i in range(18):\n",
+    "            for j in range(32):\n",
+    "                # Define the coordinates of the current patch\n",
+    "                h_start = i * patch_height\n",
+    "                w_start = j * patch_width\n",
+    "                h_end = h_start + patch_height\n",
+    "                w_end = w_start + patch_width\n",
+    "                \n",
+    "                # Assign the patchwise_id value to the corresponding patch area\n",
+    "                reconstructed_img[h_start:h_end, w_start:w_end] = patchwise_id[i, j]\n",
+    "        \n",
+    "        return reconstructed_img\n",
+    "\n",
+    "reference_info_path = osp.join(\"/local/home/ekoller/R3Scan/files/patch_anno\", \"patch_anno_{}_{}\".format(32,18),\"{}.pkl\".format(curr_scan_id))\n",
+    "gt_patches = scan3r.load_pkl_data(reference_info_path)\n",
+    "\n",
+    "gt_patches =gt_patches[frame_number]\n",
+    "print(\"gt_patches \")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "img = reconstruct_to_image(gt_patches)\n",
+    "print(img.shape)\n",
+    "\n",
+    "img_display = cv2.convertScaleAbs(img, alpha=(255.0/np.max(img)))\n",
+    "cv2.imshow(\"Reconstructed Image\", img_display)\n",
+    "cv2.waitKey(0)  # Wait indefinitely until a key is pressed\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,41 +224,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'000015'"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#puts the pose into the reference scan\n",
-    "def pose_in_reference(data_dir,scan_id, pose_rescan):\n",
-    "    #for rescan no need to change that\n",
-    "    if scan3r.is_rescan(data_dir,scan_id):\n",
+    "def pose_in_reference(data_dir, scan_id , pose_rescan):\n",
+    "    #same coordinate system\n",
+    "    ref_id = scan3r.get_reference_id(data_dir,scan_id)\n",
+    "    #if we want the coords in the reference coordinate system return the boxes (based on pkl file)\n",
+    "    if scan_id==ref_id:\n",
     "        return pose_rescan\n",
-    "\n",
-    "    #get the path to the matricies of each scan_id for transformation of rescan to reference\n",
-    "    path = osp.join(data_dir,\"files\", \"3RScan.json\")\n",
-    "    #access the particular rescan_scan_id\n",
-    "    ref2_rescan_all_id = scan3r.read_transform_mat(path)\n",
-    "    ref2rescan = ref2_rescan_all_id[scan_id] \n",
-    "    rescan2ref = np.linalg.inv(ref2rescan)\n",
-    "\n",
-    "    #based on rayintersection where we transformed the extrinsic matrix we now just transforme the pose\n",
-    "    pose_reference = pose_rescan * rescan2ref.transpose()\n",
-    "\n",
-    "    return pose_reference\n",
     "    \n",
     "\n",
-    "pose_in_reference(data_dir,new_scan_id, frame_number)"
+    "    #transform the centers of rescan to ref coord\n",
+    "    path = osp.join(data_dir,\"files\", \"3RScan.json\")\n",
+    "    map_id_to_trans = scan3r.read_transform_mat(path)\n",
+    "    transform = map_id_to_trans[scan_id]\n",
+    "    rescan2ref = np.linalg.inv(transform)\n",
+    "    transform= transform.reshape(4,4)\n",
+    "\n",
+    "    #transform the pose\n",
+    "\n",
+    "    return  transform.transpose() * pose_rescan\n",
+    "\n",
+    "#puts the pose into the reference scan\n",
+    "# def pose_in_reference(data_dir,scan_id, pose_rescan):\n",
+    "#     #for rescan no need to change that\n",
+    "#     if scan3r.is_reference(data_dir,scan_id):\n",
+    "#         return pose_rescan\n",
+    "\n",
+    "#     ref_scan_id = scan3r.get_reference_id(data_dir, scan_id)\n",
+    "#     #get the path to the matricies of each scan_id for transformation of rescan to reference\n",
+    "#     path = osp.join(data_dir,\"files\", \"3RScan.json\")\n",
+    "#     #access the particular rescan_scan_id\n",
+    "#     ref2_rescan_all_id = scan3r.read_transform_mat(path)\n",
+    "#     ref2rescan = ref2_rescan_all_id[ref_scan_id] \n",
+    "#     rescan2ref = np.linalg.inv(ref2rescan)\n",
+    "\n",
+    "#     #based on rayintersection where we transformed the extrinsic matrix we now just transforme the pose\n",
+    "#     pose_reference = pose_rescan * rescan2ref.transpose()\n",
+    "\n",
+    "#     return pose_reference\n",
+    "    \n",
+    "\n",
+    "# pose_in_reference(data_dir,new_scan_id, frame_number)"
    ]
   },
   {
@@ -213,16 +279,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pose rescan shape (4, 4)\n",
-      "og map <PIL.PpmImagePlugin.PpmImageFile image mode=I size=224x172 at 0x7F272CBF5BB0>\n",
-      "resized map <PIL.Image.Image image mode=I size=960x540 at 0x7F272CBF5EE0>\n",
+      "pose in ref shape [[ 0.3844095   0.40171845 -0.83117437 -0.93633917]\n",
+      " [ 0.03752294 -0.90641139 -0.42072672  0.2091498 ]\n",
+      " [-0.92239962  0.13054288 -0.36350624  0.10713241]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
+      "og map <PIL.PpmImagePlugin.PpmImageFile image mode=I size=224x172 at 0x7F7A15D18AF0>\n",
+      "resized map <PIL.Image.Image image mode=I size=960x540 at 0x7F7A0C250A00>\n",
       "final map (540, 960)\n",
       "objects shape (540, 960, 3)\n",
       "computed world coords (3, 518400)\n",
@@ -246,7 +315,7 @@
     "#access the extrinsic/pose of the camera\n",
     "pose_rescan = scan3r.load_pose(osp.join(data_dir, \"scenes\"), new_scan_id, frame_number)\n",
     "pose_in_ref = pose_in_reference(data_dir, new_scan_id, pose_rescan)\n",
-    "print(\"pose rescan shape\", pose_rescan.shape)\n",
+    "print(\"pose in ref shape\", pose_in_ref)\n",
     "\n",
     "#get the intrinsic of the camera\n",
     "# get img info and camera intrinsics \n",
@@ -328,8 +397,8 @@
     "rgb_colors = rgb_array[v_flat, u_flat]\n",
     "print(\"computed colours\" , rgb_colors.shape)\n",
     "point_cloud = o3d.geometry.PointCloud()\n",
-    "point_cloud.points = o3d.utility.Vector3dVector(world_coords_T)\n",
-    "point_cloud.colors = o3d.utility.Vector3dVector(rgb_colors) \n",
+    "point_cloud.points = o3d.utility.Vector3dVector(np.array(world_coords_T))\n",
+    "point_cloud.colors = o3d.utility.Vector3dVector(np.array(rgb_colors))\n",
     "#o3d.visualization.draw_geometries([point_cloud])\n",
     "\n",
     "# Load the mesh\n",
@@ -350,8 +419,9 @@
     "colors = colors[:, [2, 1, 0]]  # Swap red and blue channels\n",
     "new_mesh.vertex_colors = o3d.utility.Vector3dVector(colors)\n",
     "\n",
+    "\n",
     "# Display both the mesh and point cloud together\n",
-    "o3d.visualization.draw_geometries([point_cloud, new_mesh], window_name=\"Mesh and Point Cloud Display\")\n",
+    "o3d.visualization.draw_geometries([new_mesh, point_cloud], window_name=\"Mesh and Point Cloud Display\")\n",
     "\n"
    ]
   }
