--- a/sceneGraph_update/depth_map_computations/r3scan_depthmap.ipynb
+++ b/sceneGraph_update/depth_map_computations/r3scan_depthmap.ipynb
@@ -32,6 +32,7 @@
     "import json\n",
     "import subprocess\n",
     "from PIL import Image\n",
+    "import h5py\n",
     "\n",
     "import pickle\n",
     "from  plyfile import PlyData\n",
@@ -53,6 +54,7 @@
     "scenes_dir = '/local/home/ekoller/R3Scan/scenes'\n",
     "#scan_id= \"38770c95-86d7-27b8-8717-3485b411ddc7\" #is reference scan  since it is a reference scan everything shouls be correctly hit\n",
     "frame_number = \"000015\"\n",
+    "frame_number_2 =  \"000016\"\n",
     "img_width = 960\n",
     "img_height = 540\n",
     "\n",
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -290,13 +292,15 @@
       " [ 0.03752294 -0.90641139 -0.42072672  0.2091498 ]\n",
       " [-0.92239962  0.13054288 -0.36350624  0.10713241]\n",
       " [ 0.          0.          0.          1.        ]]\n",
-      "og map <PIL.PpmImagePlugin.PpmImageFile image mode=I size=224x172 at 0x7F7A15D18AF0>\n",
-      "resized map <PIL.Image.Image image mode=I size=960x540 at 0x7F7A0C250A00>\n",
+      "og map <PIL.PpmImagePlugin.PpmImageFile image mode=I size=224x172 at 0x7F65597A3700>\n",
+      "resized map <PIL.Image.Image image mode=I size=960x540 at 0x7F6559C01400>\n",
       "final map (540, 960)\n",
       "objects shape (540, 960, 3)\n",
       "computed world coords (3, 518400)\n",
       "computed world coords T (518400, 3)\n",
-      "computed colours (518400, 3)\n"
+      "computed colours (518400, 3)\n",
+      "Original point cloud size: 518400\n",
+      "Downsampled point cloud size: 940\n"
      ]
     }
    ],
@@ -401,6 +405,18 @@
     "point_cloud.colors = o3d.utility.Vector3dVector(np.array(rgb_colors))\n",
     "#o3d.visualization.draw_geometries([point_cloud])\n",
     "\n",
+    "# Set the voxel size (you can adjust this depending on the desired resolution)\n",
+    "voxel_size = 0.08  # Adjust this value based on your needs\n",
+    "\n",
+    "# Apply voxel downsampling\n",
+    "downsampled_point_cloud = point_cloud.voxel_down_sample(voxel_size=voxel_size)\n",
+    "\n",
+    "# Print the number of points before and after downsampling\n",
+    "print(\"Original point cloud size:\", len(point_cloud.points))\n",
+    "print(\"Downsampled point cloud size:\", len(downsampled_point_cloud.points))\n",
+    "\n",
+    "\n",
+    "\n",
     "# Load the mesh\n",
     "pathToMesh = osp.join(data_dir, \"scenes\", new_scan_id, \"labels.instances.align.annotated.v2.ply\")\n",
     "new_mesh = o3d.io.read_triangle_mesh(pathToMesh)\n",
@@ -421,8 +437,399 @@
     "\n",
     "\n",
     "# Display both the mesh and point cloud together\n",
-    "o3d.visualization.draw_geometries([new_mesh, point_cloud], window_name=\"Mesh and Point Cloud Display\")\n",
+    "o3d.visualization.draw_geometries([point_cloud], window_name=\"Mesh and Point Cloud Display\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this part now tries to get the depthmaps of the same object in 2 frames and visualize it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#the dino generated mask\n",
+    "#returns featuer in the form of features: frame: list of {objext_id, bbox, mask} objects\n",
+    "def read_segmentation_data(segmentation_path):\n",
+    "    features = {}\n",
+    "    with h5py.File(segmentation_path, 'r') as hdf_file:\n",
+    "            for frame_idx in hdf_file.keys():\n",
+    "                #init boxlist for curr frame\n",
+    "                bounding_boxes = []\n",
+    "                \n",
+    "                # get info \n",
+    "                frame_group = hdf_file[frame_idx]\n",
+    "                \n",
+    "                #iterate over each boundingbox\n",
+    "                for bbox_key in frame_group.keys():\n",
+    "                    bbox_group = frame_group[bbox_key]\n",
+    "                    \n",
+    "                    #get te obj id\n",
+    "                    object_id = bbox_group.attrs['object_id']\n",
+    "                    \n",
+    "                    #get the boundingbox\n",
+    "                    bbox = bbox_group['bbox'][:]\n",
+    "                    \n",
+    "                    # get the maskt\n",
+    "                    mask = bbox_group['mask'][:]\n",
+    "                    \n",
+    "                    # append to list\n",
+    "                    bounding_boxes.append({\n",
+    "                        'object_id': object_id,\n",
+    "                        'bbox': bbox,\n",
+    "                        'mask': mask\n",
+    "                    })\n",
+    "                \n",
+    "                # stor it to the corresponding frame\n",
+    "                \n",
+    "                features[frame_idx] = bounding_boxes\n",
+    "    return features\n",
+    "\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#transform to reference coordinate system\n",
+    "def transform_to_3d(data_dir, scenes_dir, scan_id, depth_map, colour_map, frame_number):\n",
+    "    \"\"\" access the needed files and stuff like that\n",
+    "    \"\"\"\n",
+    "   \n",
+    "    #access the extrinsic/pose of the camera\n",
+    "    pose_rescan = scan3r.load_pose(osp.join(data_dir, \"scenes\"), scan_id, frame_number)\n",
+    "    pose_in_ref = pose_in_reference(data_dir, scan_id, pose_rescan)\n",
+    "    \n",
+    "    camera_info = scan3r.load_intrinsics(scenes_dir, scan_id)\n",
+    "    intrinsics = camera_info['intrinsic_mat']\n",
+    "    img_width = int(camera_info['width'])\n",
+    "    img_height = int(camera_info['height'])\n",
+    "\n",
+    "    \"\"\"\n",
+    "    do the computations based on following formula \n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    #from 2d to camera coordinates xc = (u-cx)*z / fx,   yc = (v-cy)*z/ fy    , zc= z \n",
+    "\n",
+    "\n",
+    "    #create a mesh grid since apparently that is how it is done lol\n",
+    "    u, v = np.meshgrid(np.arange(img_width), np.arange(img_height))\n",
+    "\n",
+    "    #also access the intrinsic values\n",
+    "    # intrinsic_mat = np.array([[intrinsic_fx, 0, intrinsic_cx],\n",
+    "    #                                     [0, intrinsic_fy, intrinsic_cy],\n",
+    "    #                                     [0, 0, 1]])\n",
+    "\n",
+    "    fx = intrinsics[0, 0]  # Focal length in x direction\n",
+    "    fy = intrinsics[1, 1]  # Focal length in y direction\n",
+    "    cx = intrinsics[0, 2]  # Principal point x\n",
+    "    cy = intrinsics[1, 2]  # Principal point y\n",
+    "    #flatten everything for computations\n",
+    "    u_flat = u.flatten()\n",
+    "    v_flat = v.flatten()\n",
+    "    depth_flat = depth_map.flatten()\n",
+    "\n",
+    "    #apply the formula from above\n",
+    "    x_c = (u_flat - cx) * depth_flat / fx\n",
+    "    y_c = (v_flat - cy) * depth_flat / fy\n",
+    "    z_c = depth_flat\n",
+    "\n",
+    "    #turn the camera coordinates into homogeneous coordinates\n",
+    "    camera_coords_homog  = np.vstack((x_c, y_c, z_c, np.ones_like(x_c)))  \n",
+    "\n",
+    "    #apply the extrinsic matrix\n",
+    "    world_coords_homog = pose_in_ref @ camera_coords_homog\n",
+    "    #normalize\n",
+    "    world_coords_homog /= world_coords_homog[3, :]  \n",
+    "\n",
+    "    world_coords = world_coords_homog[:3,:]\n",
+    "    world_coords_T = world_coords.T\n",
+    "    print(\"computed world coords\" , world_coords.shape)\n",
+    "    print(\"computed world coords T\" , world_coords_T.shape)\n",
+    "    #normalize the colour of the gt\n",
+    "    rgb_array = np.array(colour_map) / 255.0\n",
+    "    #access the colours \n",
+    "    rgb_colors = rgb_array[v_flat, u_flat]\n",
+    "   \n",
+    "\n",
+    "    return world_coords_T, rgb_colors\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def voxel_grid_to_coordinates(voxel_grid):\n",
+    "    \"\"\"Extract voxel coordinates from a VoxelGrid object.\"\"\"\n",
+    "    voxels = voxel_grid.get_voxels()\n",
+    "    voxel_coords = np.array([voxel.grid_index for voxel in voxels])\n",
+    "    return voxel_coords\n",
+    "\n",
+    "\n",
+    "def compare_voxel_grids(voxel_grid1, voxel_grid2):\n",
+    "    \"\"\"Compare two voxel grids to see how much they overlap.\"\"\"\n",
+    "    coords1 = voxel_grid_to_coordinates(voxel_grid1)\n",
+    "    coords2 = voxel_grid_to_coordinates(voxel_grid2)\n",
+    "    \n",
+    "    # Convert to sets of tuples for intersection\n",
+    "    voxels1_set = set(map(tuple, coords1))\n",
+    "    voxels2_set = set(map(tuple, coords2))\n",
+    "    \n",
+    "    # Compute intersection\n",
+    "    intersection = voxels1_set.intersection(voxels2_set)\n",
+    "    union = voxels1_set.union(voxels2_set)\n",
+    "    \n",
+    "    similarity = len(intersection) / len(union) if len(union) > 0 else 0\n",
+    "    return similarity\n",
+    "\n",
+    "# def create_bounding_box_lines(bbox):\n",
+    "#     # Create a LineSet for the bounding box\n",
+    "#     lines = [\n",
+    "#         [0, 1], [1, 2], [2, 3], [3, 0], # bottom face\n",
+    "#         [4, 5], [5, 6], [6, 7], [7, 4], # top face\n",
+    "#         [0, 4], [1, 5], [2, 6], [3, 7]  # vertical lines\n",
+    "#     ]\n",
+    "#     # Convert the bounding box min and max bounds to corner points\n",
+    "#     min_bound = bbox.get_min_bound()\n",
+    "#     max_bound = bbox.get_max_bound()\n",
+    "\n",
+    "#     corners = [\n",
+    "#         [min_bound[0], min_bound[1], min_bound[2]],\n",
+    "#         [max_bound[0], min_bound[1], min_bound[2]],\n",
+    "#         [max_bound[0], max_bound[1], min_bound[2]],\n",
+    "#         [min_bound[0], max_bound[1], min_bound[2]],\n",
+    "#         [min_bound[0], min_bound[1], max_bound[2]],\n",
+    "#         [max_bound[0], min_bound[1], max_bound[2]],\n",
+    "#         [max_bound[0], max_bound[1], max_bound[2]],\n",
+    "#         [min_bound[0], max_bound[1], max_bound[2]]\n",
+    "#     ]\n",
+    "\n",
+    "#     lines_set = o3d.geometry.LineSet()\n",
+    "#     lines_set.points = o3d.utility.Vector3dVector(corners)\n",
+    "#     lines_set.lines = o3d.utility.Vector2iVector(lines)\n",
+    "#     return \n",
+    "\n",
+    "\n",
+    "# def check_mesh_intersection(mesh1, mesh2):\n",
+    "#     # Check if two meshes intersect\n",
+    "#     mesh1.compute_triangle_normals()\n",
+    "#     mesh2.compute_triangle_normals()\n",
+    "#     mesh1_tree = o3d.geometry.KDTreeFlann(mesh1)\n",
+    "#     mesh2_tree = o3d.geometry.KDTreeFlann(mesh2)\n",
+    "    \n",
+    "#     # Check for intersection by sampling points from the first mesh and searching for them in the second mesh\n",
+    "#     for point in mesh1.vertices:\n",
+    "#         [_, idx, _] = mesh2_tree.search_knn_vector_3d(point, 1)\n",
+    "#         if len(idx) > 0:\n",
+    "#             return True\n",
+    "#     return False\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'object_id': 11, 'bbox': array([450, 270,  30,  30], dtype=int32), 'mask': array([[0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       ...,\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)}\n",
+      "rgb shape (540, 960, 3)\n",
+      "computed world coords (3, 518400)\n",
+      "computed world coords T (518400, 3)\n",
+      "{'object_id': 11, 'bbox': array([360, 240,  30,  30], dtype=int32), 'mask': array([[0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       ...,\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)}\n",
+      "computed world coords (3, 518400)\n",
+      "computed world coords T (518400, 3)\n",
+      "[False False False ... False False False]\n",
+      "shape obje point (900, 3)\n",
+      "obje points shape (900, 3)\n",
+      "The new points likely represent the same object. Similarity is 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#access the dino segmentation\n",
+    "     #access the segmentation of the scan_id\n",
+    "segmentation_info_path = osp.join(\"/media/ekoller/T7/Segmentation/DinoV2/objects\", new_scan_id + \".h5\")\n",
+    "segmentation_data = read_segmentation_data(segmentation_info_path)\n",
+    "\n",
+    "frame_boxes = segmentation_data[frame_number][2]\n",
+    "print(frame_boxes)\n",
+    "mask = frame_boxes[\"mask\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "#access the rgb of the image\n",
+    "rgb_path = osp.join(scenes_dir, new_scan_id, \"sequence\", \"frame-{}.color.jpg\".format(frame_number))\n",
+    "#access the file\n",
+    "rgb_file = Image.open(rgb_path)\n",
+    "\n",
+    "rgb_mat = np.array(rgb_file)\n",
+    "print(\"rgb shape\", rgb_mat.shape)\n",
+    "\n",
+    "\n",
+    "#access the deph map of a frame\n",
+    "depth_path = osp.join(scenes_dir, new_scan_id, \"sequence\", \"frame-{}.depth.pgm\".format(frame_number))\n",
+    "#access the file\n",
+    "pgm_file = Image.open(depth_path)\n",
+    "\n",
+    "#since its distances so discrete things take the nearest value not a different interpolation\n",
+    "depth_mat_resized = pgm_file.resize((img_width, img_height), Image.NEAREST) \n",
+    "\n",
+    "#depth is given in mm so put it into m\n",
+    "depth_mat = np.array(depth_mat_resized)\n",
+    "depth_mat = depth_mat * 0.001\n",
+    "\n",
+    "\n",
+    "#create the 3d projection\n",
+    "world_coord, rgb_coord = transform_to_3d(data_dir, scenes_dir, new_scan_id, depth_mat, rgb_mat, frame_number)\n",
+    "\n",
+    "\n",
+    "og_point_cloud = o3d.geometry.PointCloud()\n",
+    "og_point_cloud.points = o3d.utility.Vector3dVector(np.array(world_coord))\n",
+    "og_point_cloud.colors = o3d.utility.Vector3dVector(np.array(rgb_coord))\n",
+    " \n",
+    "\n",
+    "\"\"\"Do the same thing for the second frame\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "#access the segmentation of the scan_id\n",
+    "\n",
+    "frame_boxes = segmentation_data[frame_number_2][2]\n",
+    "print(frame_boxes)\n",
+    "mask_2 = frame_boxes[\"mask\"]\n",
+    "\n",
+    "\n",
+    "#access the rgb of the image\n",
+    "rgb_path_2 = osp.join(scenes_dir, new_scan_id, \"sequence\", \"frame-{}.color.jpg\".format(frame_number_2))\n",
+    "#access the file\n",
+    "rgb_file_2 = Image.open(rgb_path_2)\n",
+    "\n",
+    "rgb_mat_2 = np.array(rgb_file_2)\n",
+    "\n",
+    "\n",
+    "#access the deph map of a frame\n",
+    "depth_path = osp.join(scenes_dir, new_scan_id, \"sequence\", \"frame-{}.depth.pgm\".format(frame_number_2))\n",
+    "#access the file\n",
+    "pgm_file = Image.open(depth_path)\n",
+    "\n",
+    "#since its distances so discrete things take the nearest value not a different interpolation\n",
+    "depth_mat_resized_2 = pgm_file.resize((img_width, img_height), Image.NEAREST) \n",
+    "\n",
+    "#depth is given in mm so put it into m\n",
+    "depth_mat_2 = np.array(depth_mat_resized_2)\n",
+    "depth_mat_2 = depth_mat * 0.001\n",
+    "\n",
+    "\n",
+    "\n",
+    "world_coord_2, rgb_coord_2 = transform_to_3d(data_dir, scenes_dir, new_scan_id, depth_mat_2, rgb_mat_2, frame_number_2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\" based on the points filter the ones out which correspond to our points, turn this into point clouds\n",
+    "\"\"\"\n",
+    "mask = np.array(mask)  # Replace with your mask array\n",
+    "\n",
+    "# Convert mask to an image\n",
+    "mask_image = Image.fromarray(mask.astype(np.uint8) * 255)  # Convert mask to 8-bit grayscale\n",
+    "\n",
+    "mask_image.show()\n",
+    "mask = mask.flatten()\n",
+    "mask =  mask.astype(bool)\n",
+    "print(mask)\n",
+    "obj_points = world_coord[mask]\n",
+    "print(\"shape obje point\", obj_points.shape)\n",
+    "obj_rgb = rgb_coord[mask]\n",
+    "#turn into a pointcloud\n",
+    "point_cloud = o3d.geometry.PointCloud()\n",
+    "point_cloud.points = o3d.utility.Vector3dVector(np.array(obj_points))\n",
+    "point_cloud.colors = o3d.utility.Vector3dVector(np.array(obj_rgb))\n",
+    " \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "mask_2 = np.array(mask_2)  # Replace with your mask array\n",
+    "\n",
+    "# Convert mask to an image\n",
+    "mask_image_2 = Image.fromarray(mask_2.astype(np.uint8) * 255)  # Convert mask to 8-bit grayscale\n",
+    "\n",
+    "mask_image_2.show()\n",
+    "\n",
+    "mask_2 = mask_2.flatten()\n",
+    "mask_2 = mask_2.astype(bool)\n",
+    "obj_points_2 = world_coord_2[mask_2]\n",
+    "print(\"obje points shape\", obj_points.shape)\n",
+    "obj_rgb_2 = rgb_coord_2[mask_2]\n",
+    "#turn into a pointcloud\n",
+    "point_cloud_2 = o3d.geometry.PointCloud()\n",
+    "point_cloud_2.points = o3d.utility.Vector3dVector(np.array(obj_points_2))\n",
+    "point_cloud_2.colors = o3d.utility.Vector3dVector(np.array(obj_rgb_2))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"look at voxelgridoverlap\n",
+    "\"\"\"\n",
+    "voxel_size = 0.05 # Adjust voxel size as needed\n",
+    "voxel_grid = o3d.geometry.VoxelGrid.create_from_point_cloud(point_cloud, voxel_size)\n",
+    "voxel_grid2 = o3d.geometry.VoxelGrid.create_from_point_cloud(point_cloud_2, voxel_size)\n",
+    "\n",
+    "similarity = compare_voxel_grids(voxel_grid, voxel_grid2)\n",
+    "\n",
+    "if True:\n",
+    "    print(\"The new points likely represent the same object. Similarity is\", similarity)\n",
+    "\n",
+    "    # Combine the points if they represent the same object\n",
+    "    all_pointcloud = o3d.geometry.PointCloud()\n",
+    "    all_points = np.vstack((np.asarray(point_cloud.points), np.asarray(point_cloud_2.points)))\n",
+    "    all_colors = np.vstack((np.asarray(point_cloud.colors), np.asarray(point_cloud_2.colors)))\n",
+    "\n",
+    "    # Update the point cloud with the combined points and colors\n",
+    "    all_pointcloud.points = o3d.utility.Vector3dVector(all_points)\n",
+    "    all_pointcloud.colors = o3d.utility.Vector3dVector(all_colors)\n",
+    "\n",
+    "    # Visualize both point clouds and their bounding boxes\n",
+    "    o3d.visualization.draw_geometries([all_pointcloud])\n",
+    "else:\n",
+    "    print(\"The new points likely represent a different object. Similarity is \", similarity)\n",
+    "\n",
+    "    # Visualize both point clouds and their bounding boxes\n",
+    "    o3d.visualization.draw_geometries([point_cloud, point_cloud_2, og_point_cloud])\n"
    ]
   }
  ],
