--- a/sceneGraph_update/depth_map_computations/r3scan_depthmap.ipynb
+++ b/sceneGraph_update/depth_map_computations/r3scan_depthmap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,6 @@
     "    path = osp.join(data_dir,\"files\", \"3RScan.json\")\n",
     "    map_id_to_trans = scan3r.read_transform_mat(path)\n",
     "    transform = map_id_to_trans[scan_id]\n",
-    "    rescan2ref = np.linalg.inv(transform)\n",
     "    transform= transform.reshape(4,4)\n",
     "\n",
     "    #transform the pose\n",
@@ -281,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +291,8 @@
       " [ 0.03752294 -0.90641139 -0.42072672  0.2091498 ]\n",
       " [-0.92239962  0.13054288 -0.36350624  0.10713241]\n",
       " [ 0.          0.          0.          1.        ]]\n",
-      "og map <PIL.PpmImagePlugin.PpmImageFile image mode=I size=224x172 at 0x7F65597A3700>\n",
-      "resized map <PIL.Image.Image image mode=I size=960x540 at 0x7F6559C01400>\n",
+      "og map <PIL.PpmImagePlugin.PpmImageFile image mode=I size=224x172 at 0x7FE1AC43FDF0>\n",
+      "resized map <PIL.Image.Image image mode=I size=960x540 at 0x7FE1AC43F580>\n",
       "final map (540, 960)\n",
       "objects shape (540, 960, 3)\n",
       "computed world coords (3, 518400)\n",
@@ -437,7 +436,7 @@
     "\n",
     "\n",
     "# Display both the mesh and point cloud together\n",
-    "o3d.visualization.draw_geometries([point_cloud], window_name=\"Mesh and Point Cloud Display\")\n",
+    "o3d.visualization.draw_geometries([point_cloud, new_mesh], window_name=\"Mesh and Point Cloud Display\")\n",
     "\n"
    ]
   },
@@ -450,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -676,8 +675,18 @@
       "computed world coords T (518400, 3)\n",
       "[False False False ... False False False]\n",
       "shape obje point (900, 3)\n",
-      "obje points shape (900, 3)\n",
-      "The new points likely represent the same object. Similarity is 0.0\n"
+      "obje points shape (900, 3)\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 117\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;66;03m#turn into a pointcloud\u001b[39;00m\n\u001b[1;32m    116\u001b[0m point_cloud_2 \u001b[38;5;241m=\u001b[39m o3d\u001b[38;5;241m.\u001b[39mgeometry\u001b[38;5;241m.\u001b[39mPointCloud()\n\u001b[0;32m--> 117\u001b[0m point_cloud_2\u001b[38;5;241m.\u001b[39mpoints \u001b[38;5;241m=\u001b[39m \u001b[43mo3d\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mutility\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mVector3dVector\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    118\u001b[0m point_cloud_2\u001b[38;5;241m.\u001b[39mcolors \u001b[38;5;241m=\u001b[39m o3d\u001b[38;5;241m.\u001b[39mutility\u001b[38;5;241m.\u001b[39mVector3dVector(np\u001b[38;5;241m.\u001b[39marray([]))\n\u001b[1;32m    122\u001b[0m \u001b[38;5;124;03m\"\"\"look at voxelgridoverlap\u001b[39;00m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: "
      ]
     }
    ],
@@ -811,7 +820,7 @@
     "\n",
     "similarity = compare_voxel_grids(voxel_grid, voxel_grid2)\n",
     "\n",
-    "if True:\n",
+    "if similarity:\n",
     "    print(\"The new points likely represent the same object. Similarity is\", similarity)\n",
     "\n",
     "    # Combine the points if they represent the same object\n",
