added some more code for the computed pointcloud visualization

--- a/matching/visualization.ipynb
+++ b/matching/visualization.ipynb
@@ -207,7 +207,7 @@
     "\n",
     "segmentation_info = {}\n",
     "segmentation_info_path = osp.join(\"/media/ekoller/T7/files/Segmentation/DinoV2/objects\", new_scan_id + \".h5\")\n",
-    "with h5py.File(segmentation_info_path, 'w') as hdf_file:\n",
+    "with h5py.File(segmentation_info_path, 'r') as hdf_file:\n",
     "             for frame_idx in hdf_file.keys():\n",
     "                #init boxlist for curr frame\n",
     "                bounding_boxes = []\n",
@@ -240,7 +240,7 @@
     "\n",
     "\n",
     "id_matches = {}\n",
-    "matches_path = osp.join(\"local/home/ekoller/R3Scan/files/Matches\", new_scan_id + \".h5\")\n",
+    "matches_path = osp.join(\"/local/home/ekoller/R3Scan/files/Matches\", new_scan_id + \".h5\")\n",
     "with h5py.File(matches_path, 'r') as hdf_file:\n",
     "            id_matches = {}\n",
     "            \n",
