added code for precision & recall

--- a/sceneGraph_update/visualization_pointclouds.ipynb
+++ b/sceneGraph_update/visualization_pointclouds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -50,13 +50,13 @@
     "scenes_dir = '/local/home/ekoller/R3Scan/scenes'\n",
     "#scan_id= \"38770c95-86d7-27b8-8717-3485b411ddc7\" #is reference scan  since it is a reference scan everything shouls be correctly hit\n",
     "curr_scan_id =  \"02b33dfb-be2b-2d54-92d2-cd012b2b3c40\"#\"02b33e01-be2b-2d54-93fb-4145a709cec5\" \n",
-    "new_scan_id =  \"6d8a-622d-291c-8429-0e1109c6bb26 \" #\"fcf66d8a-622d-291c-8429-0e1109c6bb26\"\n",
+    "new_scan_id =  \"fcf66d8a-622d-291c-8429-0e1109c6bb26\" #\"fcf66d8a-622d-291c-8429-0e1109c6bb26\"\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
      "output_type": "stream",
      "text": [
       "cur scan id colors dict_keys([3, 10, 17, 6, 4, 16, 2, 7, 15, 14, 1, 11, 0, 22, 8, 9, 30, 28, 12, 26, 24, 25, 5, 29, 21, 20, 13, 23, 27])\n",
-      "new scan id colors dict_keys([17, 8, 10, 11, 16, 6, 14, 0, 3, 1, 26, 7, 2, 25, 30, 15, 13, 20, 4, 12, 23, 27, 21, 28, 29])\n"
+      "new scan id colors dict_keys([13, 20, 1, 4, 100, 6, 14, 15, 18, 29, 5, 8, 16, 105, 0])\n"
      ]
     }
    ],
@@ -108,24 +108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] Unable to synchronously open file (unable to open file: name = '/media/ekoller/T7/Predicted_Centers/6d8a-622d-291c-8429-0e1109c6bb26 .h5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)",
+     "evalue": "[Errno 2] Unable to synchronously open file (unable to open file: name = '/media/ekoller/T7/Predicted_Centers/fcf66d8a-622d-291c-8429-0e1109c6bb26.h5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 19\u001b[0m\n\u001b[1;32m     12\u001b[0m             all_centers[\u001b[38;5;28mint\u001b[39m(obj_id)] \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     13\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcenter\u001b[39m\u001b[38;5;124m'\u001b[39m: center,\n\u001b[1;32m     14\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpoints\u001b[39m\u001b[38;5;124m'\u001b[39m: points,\n\u001b[1;32m     15\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvotes\u001b[39m\u001b[38;5;124m'\u001b[39m: votes\n\u001b[1;32m     16\u001b[0m             }\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m all_centers\n\u001b[0;32m---> 19\u001b[0m \u001b[43macces_predicted_objects\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnew_scan_id\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[10], line 4\u001b[0m, in \u001b[0;36macces_predicted_objects\u001b[0;34m(scan_id)\u001b[0m\n\u001b[1;32m      2\u001b[0m all_centers \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m      3\u001b[0m filename \u001b[38;5;241m=\u001b[39m osp\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/media/ekoller/T7/Predicted_Centers\u001b[39m\u001b[38;5;124m\"\u001b[39m, scan_id \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.h5\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mh5py\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m h5file:\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m obj_id \u001b[38;5;129;01min\u001b[39;00m h5file\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[1;32m      6\u001b[0m         obj_group \u001b[38;5;241m=\u001b[39m h5file[obj_id]\n",
+      "Cell \u001b[0;32mIn[15], line 19\u001b[0m\n\u001b[1;32m     12\u001b[0m             all_centers[\u001b[38;5;28mint\u001b[39m(obj_id)] \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     13\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcenter\u001b[39m\u001b[38;5;124m'\u001b[39m: center,\n\u001b[1;32m     14\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpoints\u001b[39m\u001b[38;5;124m'\u001b[39m: points,\n\u001b[1;32m     15\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvotes\u001b[39m\u001b[38;5;124m'\u001b[39m: votes\n\u001b[1;32m     16\u001b[0m             }\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m all_centers\n\u001b[0;32m---> 19\u001b[0m \u001b[43macces_predicted_objects\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnew_scan_id\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[15], line 4\u001b[0m, in \u001b[0;36macces_predicted_objects\u001b[0;34m(scan_id)\u001b[0m\n\u001b[1;32m      2\u001b[0m all_centers \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m      3\u001b[0m filename \u001b[38;5;241m=\u001b[39m osp\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/media/ekoller/T7/Predicted_Centers\u001b[39m\u001b[38;5;124m\"\u001b[39m, scan_id \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.h5\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mh5py\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m h5file:\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m obj_id \u001b[38;5;129;01min\u001b[39;00m h5file\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[1;32m      6\u001b[0m         obj_group \u001b[38;5;241m=\u001b[39m h5file[obj_id]\n",
       "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/h5py/_hl/files.py:562\u001b[0m, in \u001b[0;36mFile.__init__\u001b[0;34m(self, name, mode, driver, libver, userblock_size, swmr, rdcc_nslots, rdcc_nbytes, rdcc_w0, track_order, fs_strategy, fs_persist, fs_threshold, fs_page_size, page_buf_size, min_meta_keep, min_raw_keep, locking, alignment_threshold, alignment_interval, meta_block_size, **kwds)\u001b[0m\n\u001b[1;32m    553\u001b[0m     fapl \u001b[38;5;241m=\u001b[39m make_fapl(driver, libver, rdcc_nslots, rdcc_nbytes, rdcc_w0,\n\u001b[1;32m    554\u001b[0m                      locking, page_buf_size, min_meta_keep, min_raw_keep,\n\u001b[1;32m    555\u001b[0m                      alignment_threshold\u001b[38;5;241m=\u001b[39malignment_threshold,\n\u001b[1;32m    556\u001b[0m                      alignment_interval\u001b[38;5;241m=\u001b[39malignment_interval,\n\u001b[1;32m    557\u001b[0m                      meta_block_size\u001b[38;5;241m=\u001b[39mmeta_block_size,\n\u001b[1;32m    558\u001b[0m                      \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[1;32m    559\u001b[0m     fcpl \u001b[38;5;241m=\u001b[39m make_fcpl(track_order\u001b[38;5;241m=\u001b[39mtrack_order, fs_strategy\u001b[38;5;241m=\u001b[39mfs_strategy,\n\u001b[1;32m    560\u001b[0m                      fs_persist\u001b[38;5;241m=\u001b[39mfs_persist, fs_threshold\u001b[38;5;241m=\u001b[39mfs_threshold,\n\u001b[1;32m    561\u001b[0m                      fs_page_size\u001b[38;5;241m=\u001b[39mfs_page_size)\n\u001b[0;32m--> 562\u001b[0m     fid \u001b[38;5;241m=\u001b[39m \u001b[43mmake_fid\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muserblock_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfapl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfcpl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mswmr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mswmr\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    564\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(libver, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[1;32m    565\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_libver \u001b[38;5;241m=\u001b[39m libver\n",
       "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/h5py/_hl/files.py:235\u001b[0m, in \u001b[0;36mmake_fid\u001b[0;34m(name, mode, userblock_size, fapl, fcpl, swmr)\u001b[0m\n\u001b[1;32m    233\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m swmr \u001b[38;5;129;01mand\u001b[39;00m swmr_support:\n\u001b[1;32m    234\u001b[0m         flags \u001b[38;5;241m|\u001b[39m\u001b[38;5;241m=\u001b[39m h5f\u001b[38;5;241m.\u001b[39mACC_SWMR_READ\n\u001b[0;32m--> 235\u001b[0m     fid \u001b[38;5;241m=\u001b[39m \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflags\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfapl\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfapl\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    236\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr+\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m    237\u001b[0m     fid \u001b[38;5;241m=\u001b[39m h5f\u001b[38;5;241m.\u001b[39mopen(name, h5f\u001b[38;5;241m.\u001b[39mACC_RDWR, fapl\u001b[38;5;241m=\u001b[39mfapl)\n",
       "File \u001b[0;32mh5py/_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32mh5py/_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32mh5py/h5f.pyx:102\u001b[0m, in \u001b[0;36mh5py.h5f.open\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] Unable to synchronously open file (unable to open file: name = '/media/ekoller/T7/Predicted_Centers/6d8a-622d-291c-8429-0e1109c6bb26 .h5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)"
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] Unable to synchronously open file (unable to open file: name = '/media/ekoller/T7/Predicted_Centers/fcf66d8a-622d-291c-8429-0e1109c6bb26.h5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)"
      ]
     }
    ],
@@ -149,6 +149,13 @@
     "    return all_centers\n",
     "\n",
     "acces_predicted_objects(new_scan_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this segment displays the predicted pointcloud and the ground truth point cloud"
    ]
   },
   {
@@ -197,11 +204,61 @@
     "    colors = np.tile(color, (points.shape[0], 1))  # Shape (num_points, 3)\n",
     "    point_cloud.colors = o3d.utility.Vector3dVector(colors)\n",
     "\n",
+    "    colors = np.asarray(point_cloud.colors)\n",
+    "    \n",
+    "    # Scale the colors by the brightness factor\n",
+    "    adjusted_colors = np.clip(colors * 1.3, 0, 1)  # Clip to ensure values are in the [0, 1] range\n",
+    "    \n",
+    "    # Update the point cloud's colors\n",
+    "    point_cloud.colors = o3d.utility.Vector3dVector(adjusted_colors)\n",
+    "\n",
     "    # Add the current object's point cloud to the final point cloud\n",
     "    final_point_cloud += point_cloud\n",
     "\n",
     "\n",
-    "o3d.visualization.draw_geometries([final_point_cloud], window_name=\"Combined Point Cloud\")\n",
+    "\n",
+    "#also access the ground truth pointclouds\n",
+    "pklfile = osp.join('/local/home/ekoller/R3Scan', 'files', 'orig', 'data', '{}.pkl'.format(new_scan_id))\n",
+    "\n",
+    "with open(pklfile, \"rb\") as f:\n",
+    "    # Load the data from the pickle file\n",
+    "    data = pickle.load(f)\n",
+    "    \n",
+    "    # Extract object points and IDs from the pickle data\n",
+    "    pointclouds = data['obj_points']\n",
+    "    object_ids = data['objects_id']\n",
+    "    \n",
+    "    # Create a new point cloud object for the .pkl data\n",
+    "    pkl_point_cloud = o3d.geometry.PointCloud()\n",
+    "\n",
+    "    # Iterate over all the points and their object IDs\n",
+    "    for obj_id, points in zip(object_ids, pointclouds):\n",
+    "        # Assign a default color (e.g., black) to these objects\n",
+    "        color = colors(obj_id) \n",
+    "        # Create a point cloud for this object's points\n",
+    "        pcd = o3d.geometry.PointCloud()\n",
+    "        pcd.points = o3d.utility.Vector3dVector(points)\n",
+    "        pcd.colors = o3d.utility.Vector3dVector(np.tile(color, (points.shape[0], 1)))  # Assign the color\n",
+    "\n",
+    "        # Add this point cloud to the combined pkl_point_cloud\n",
+    "        pkl_point_cloud += pcd\n",
+    "\n",
+    "colors = np.asarray(pkl_point_cloud.colors)\n",
+    "\n",
+    "# Scale the colors by the brightness factor\n",
+    "adjusted_colors = np.clip(colors *0.7, 0, 1)  # Clip to ensure values are in the [0, 1] range\n",
+    "\n",
+    "# Update the point cloud's colors\n",
+    "pkl_point_cloud.colors = o3d.utility.Vector3dVector(adjusted_colors)\n",
+    "# Now combine both point clouds (final_point_cloud and pkl_point_cloud) for visualization\n",
+    "combined_point_cloud = final_point_cloud + pkl_point_cloud\n",
+    "\n",
+    "# Visualize both together using Open3D\n",
+    "o3d.visualization.draw_geometries([combined_point_cloud], window_name=\"Combined Point Clouds from Scan and PKL\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "#o3d.visualization.draw_geometries([final_point_cloud], window_name=\"Combined Point Cloud\")\n",
     "\n"
    ]
   }
