--- a/matching/visualization.ipynb
+++ b/matching/visualization.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
+      "/local/home/ekoller/BT\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import os \n",
@@ -41,8 +52,9 @@
     "data_dir ='/local/home/ekoller/R3Scan'\n",
     "scenes_dir = '/local/home/ekoller/R3Scan/scenes'\n",
     "#scan_id= \"38770c95-86d7-27b8-8717-3485b411ddc7\" #is reference scan  since it is a reference scan everything shouls be correctly hit\n",
-    "curr_scan_id =  \"02b33e01-be2b-2d54-93fb-4145a709cec5\"#\"02b33e01-be2b-2d54-93fb-4145a709cec5\" \n",
-    "new_scan_id =  \"fcf66d88-622d-291c-871f-699b2d063630\" #\"fcf66d8a-622d-291c-8429-0e1109c6bb26\"\n",
+    "#curr_scan_id =  \"02b33e01-be2b-2d54-93fb-4145a709cec5\"#\"02b33e01-be2b-2d54-93fb-4145a709cec5\" \n",
+    "new_scan_id =  \"fcf66d8a-622d-291c-8429-0e1109c6bb26\" #\"fcf66d88-622d-291c-871f-699b2d063630\" #\"fcf66d8a-622d-291c-8429-0e1109c6bb26\"\n",
+    "curr_scan_id = scan3r.get_reference_id(data_dir,new_scan_id)\n",
     "frame_number = \"000007\"\n",
     "curr_frame_number = \"000007\"\n",
     "new_frame_number = \"000008\"\n",
@@ -56,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,13 +83,14 @@
     "    #go over every mask and fill in the id into the new_ids which it got mapped to\n",
     "    for seg_region in dino_data:\n",
     "        mask_id = seg_region[\"object_id\"]\n",
+    "        \n",
     "        #print(\"mask id \", mask_id)\n",
     "        #get to what the region mapped in the embeddings\n",
-    "        matched_id = id_matches[mask_id]\n",
+    "        matched_id = id_matches[str(mask_id)]\n",
     "        #print(\"matched id \", matched_id)\n",
     "        mask = seg_region[\"mask\"]\n",
     "        boolean_mask = mask == 225\n",
-    "        new_ids[boolean_mask] = matched_id[0] #[0] is the id the second one is the error\n",
+    "        new_ids[boolean_mask] = matched_id #[0] is the id the second one is the error\n",
     "        #visualize(boolean_mask, new_ids, f'Updated new_ids with mask id {mask_id}')\n",
     "\n",
     "    #returns the new ids on a pixel wise level\n",
@@ -86,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,9 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cur scan id colors dict_keys([4, 18, 2, 0, 3, 1, 100, 16, 8, 9, 24, 25, 29, 6, 26, 10, 11, 23, 27, 22, 5, 20, 12, 15, 13, 14, 103, 21])\n",
+      "new scan id colors dict_keys([13, 20, 1, 4, 100, 6, 14, 15, 18, 29, 5, 8, 16, 105, 0])\n"
+     ]
+    }
+   ],
    "source": [
     "#for a given scene get the colours of the differnt object_ids\n",
     "def get_id_colours(data_dir,scan_id):\n",
@@ -171,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,14 +221,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unique numbers in new img patchwise  [ 1.  4. 14. 29.]\n",
+      "unique numbers in new img patchwise  [ 1.  4. 14. 29.]\n",
+      "unique numbers in new img patchwise  [ 1.  4.  6. 16. 29.]\n",
+      "unique numbers in new img patchwise  [ 1.  4.  6. 24. 29.]\n",
+      "unique numbers in new img patchwise  [ 1.  4. 16. 18. 29.]\n",
+      "unique numbers in new img patchwise  [ 1.  4. 13. 14. 15. 29.]\n",
+      "unique numbers in new img patchwise  [ 1.  4. 13. 14. 15. 18. 26. 29.]\n",
+      "unique numbers in new img patchwise  [ 1.  4. 13. 14. 15. 26. 29.]\n",
+      "unique numbers in new img patchwise  [ 1.  4. 13. 14. 15. 16. 26. 29.]\n",
+      "unique numbers in new img patchwise  [  1.   4.  13.  14.  15.  26.  29. 103.]\n",
+      "unique numbers in new img patchwise  [ 1.  3.  4. 13. 14. 15. 18. 26. 29.]\n",
+      "unique numbers in new img patchwise  [ 4.  6. 13. 14.]\n",
+      "unique numbers in new img patchwise  [ 1.  4.  6. 13. 14. 16. 26.]\n",
+      "unique numbers in new img patchwise  [  1.   4.  11.  14.  29. 100.]\n",
+      "unique numbers in new img patchwise  [ 1.  3.  4.  5. 14. 26. 29.]\n",
+      "unique numbers in new img patchwise  [ 1.  4. 13. 14. 15. 16. 26. 29.]\n",
+      "unique numbers in new img patchwise  [ 1.  4. 13. 14. 15. 26. 29.]\n",
+      "unique numbers in new img patchwise  [  4.   5.   9.  13.  14.  16.  20. 100.]\n",
+      "unique numbers in new img patchwise  [  1.   4.  13.  14.  26. 100.]\n"
+     ]
+    }
+   ],
    "source": [
     "#access the segmentation info\n",
     "\n",
     "segmentation_info = {}\n",
-    "segmentation_info_path = osp.join(\"/media/ekoller/T7/files/Segmentation/DinoV2/objects\", new_scan_id + \".h5\")\n",
+    "segmentation_info_path = osp.join(\"/media/ekoller/T7/Segmentation/DinoV2/objects\", new_scan_id + \".h5\")\n",
     "with h5py.File(segmentation_info_path, 'r') as hdf_file:\n",
     "             for frame_idx in hdf_file.keys():\n",
     "                #init boxlist for curr frame\n",
@@ -240,7 +288,7 @@
     "\n",
     "\n",
     "id_matches = {}\n",
-    "matches_path = osp.join(\"/local/home/ekoller/R3Scan/files/Matches\", new_scan_id + \".h5\")\n",
+    "matches_path = osp.join(\"/local/home/ekoller/R3Scan/Predicted_Matches\", new_scan_id + \".h5\")\n",
     "with h5py.File(matches_path, 'r') as hdf_file:\n",
     "            id_matches = {}\n",
     "            \n",
@@ -254,7 +302,7 @@
     "                # Load the frame_id -> obj mappings\n",
     "                for frame_id in frame_group.keys():\n",
     "                    obj = frame_group[frame_id][()]\n",
-    "                    matches[frame_id] = obj  # Convert back to int\n",
+    "                    matches[frame_id] = int(obj)  # Convert back to int\n",
     "                \n",
     "                id_matches[frame_idx] = matches\n",
     "                    \n",
@@ -316,8 +364,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "BT",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
