improved the points pipeline and adjusted preprocessing boundingboxes

--- a/sceneGraph_update/depth_map_computations/r3scan_depthmap.ipynb
+++ b/sceneGraph_update/depth_map_computations/r3scan_depthmap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,16 +69,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gt_patches \n",
-      "(540, 960)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def reconstruct_to_image( patchwise_id):\n",
     "        patch_width = 30\n",
@@ -101,22 +92,22 @@
     "        \n",
     "        return reconstructed_img\n",
     "\n",
-    "reference_info_path = osp.join(\"/local/home/ekoller/R3Scan/files/patch_anno\", \"patch_anno_{}_{}\".format(32,18),\"{}.pkl\".format(curr_scan_id))\n",
-    "gt_patches = scan3r.load_pkl_data(reference_info_path)\n",
+    "# reference_info_path = osp.join(\"/local/home/ekoller/R3Scan/files/patch_anno\", \"patch_anno_{}_{}\".format(32,18),\"{}.pkl\".format(curr_scan_id))\n",
+    "# gt_patches = scan3r.load_pkl_data(reference_info_path)\n",
     "\n",
-    "gt_patches =gt_patches[frame_number]\n",
-    "print(\"gt_patches \")\n",
-    "\n",
-    "\n",
+    "# gt_patches =gt_patches[frame_number]\n",
+    "# print(\"gt_patches \")\n",
     "\n",
     "\n",
-    "img = reconstruct_to_image(gt_patches)\n",
-    "print(img.shape)\n",
     "\n",
-    "img_display = cv2.convertScaleAbs(img, alpha=(255.0/np.max(img)))\n",
-    "cv2.imshow(\"Reconstructed Image\", img_display)\n",
-    "cv2.waitKey(0)  # Wait indefinitely until a key is pressed\n",
-    "cv2.destroyAllWindows()\n"
+    "\n",
+    "# img = reconstruct_to_image(gt_patches)\n",
+    "# print(img.shape)\n",
+    "\n",
+    "# img_display = cv2.convertScaleAbs(img, alpha=(255.0/np.max(img)))\n",
+    "# cv2.imshow(\"Reconstructed Image\", img_display)\n",
+    "# cv2.waitKey(0)  # Wait indefinitely until a key is pressed\n",
+    "# cv2.destroyAllWindows()\n"
    ]
   },
   {
@@ -188,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -291,15 +282,97 @@
       " [ 0.03752294 -0.90641139 -0.42072672  0.2091498 ]\n",
       " [-0.92239962  0.13054288 -0.36350624  0.10713241]\n",
       " [ 0.          0.          0.          1.        ]]\n",
-      "og map <PIL.PpmImagePlugin.PpmImageFile image mode=I size=224x172 at 0x7FE1AC43FDF0>\n",
-      "resized map <PIL.Image.Image image mode=I size=960x540 at 0x7FE1AC43F580>\n",
+      "og map <PIL.PpmImagePlugin.PpmImageFile image mode=I size=224x172 at 0x7EFFD07A7F10>\n",
+      "resized map <PIL.Image.Image image mode=I size=960x540 at 0x7EFFD0B39E50>\n",
       "final map (540, 960)\n",
       "objects shape (540, 960, 3)\n",
       "computed world coords (3, 518400)\n",
       "computed world coords T (518400, 3)\n",
       "computed colours (518400, 3)\n",
       "Original point cloud size: 518400\n",
-      "Downsampled point cloud size: 940\n"
+      "Downsampled point cloud size: 940\n",
+      "object id 1\n",
+      "clour [0.77333333 0.88444444 1.03111111]\n",
+      "object id 2\n",
+      "clour [0.13777778 0.52888889 0.8       ]\n",
+      "object id 3\n",
+      "clour [1.13333333 0.83111111 0.53333333]\n",
+      "object id 4\n",
+      "clour [1.13333333 0.56444444 0.06222222]\n",
+      "object id 5\n",
+      "clour [0.67555556 0.99111111 0.61333333]\n",
+      "object id 6\n",
+      "clour [0.19555556 0.71111111 0.19555556]\n",
+      "object id 7\n",
+      "clour [1.13333333 0.67555556 0.66666667]\n",
+      "object id 8\n",
+      "clour [0.95111111 0.17333333 0.17777778]\n",
+      "object id 9\n",
+      "clour [0.87555556 0.78222222 0.94666667]\n",
+      "object id 10\n",
+      "clour [0.65777778 0.45777778 0.84      ]\n",
+      "object id 11\n",
+      "clour [0.87111111 0.69333333 0.65777778]\n",
+      "object id 12\n",
+      "clour [0.62222222 0.38222222 0.33333333]\n",
+      "object id 13\n",
+      "clour [1.09777778 0.80888889 0.93333333]\n",
+      "object id 14\n",
+      "clour [1.00888889 0.52888889 0.86222222]\n",
+      "object id 15\n",
+      "clour [0.97333333 0.97333333 0.62666667]\n",
+      "object id 16\n",
+      "clour [0.83555556 0.84       0.15111111]\n",
+      "object id 17\n",
+      "clour [0.70222222 0.96888889 1.01777778]\n",
+      "object id 18\n",
+      "clour [0.10222222 0.84444444 0.92      ]\n",
+      "object id 19\n",
+      "clour [0.79111111 0.33777778 0.33777778]\n",
+      "object id 20\n",
+      "clour [0.29333333 0.83555556 0.45333333]\n",
+      "object id 21\n",
+      "clour [0.62222222 0.25333333 0.87555556]\n",
+      "object id 22\n",
+      "clour [0.89777778 0.82222222 0.23111111]\n",
+      "object id 23\n",
+      "clour [0.22666667 0.78222222 0.90222222]\n",
+      "object id 24\n",
+      "clour [0.88888889 0.24       0.58222222]\n",
+      "object id 25\n",
+      "clour [0.40888889 0.85777778 0.27111111]\n",
+      "object id 26\n",
+      "clour [0.34666667 0.31555556 0.81333333]\n",
+      "object id 27\n",
+      "clour [0.76444444 0.50666667 0.36444444]\n",
+      "object id 29\n",
+      "clour [0.68       0.43555556 0.69333333]\n",
+      "object id 30\n",
+      "clour [0.62222222 0.68       0.44888889]\n",
+      "object id 31\n",
+      "clour [0.44444444 0.55555556 0.68444444]\n",
+      "object id 32\n",
+      "clour [0.79111111 0.56444444 0.6       ]\n",
+      "object id 33\n",
+      "clour [0.53333333 0.82222222 0.56888889]\n",
+      "object id 34\n",
+      "clour [0.64888889 0.49333333 0.86222222]\n",
+      "object id 35\n",
+      "clour [0.89777778 0.77333333 0.45777778]\n",
+      "object id 38\n",
+      "clour [0.62222222 0.95111111 0.40444444]\n",
+      "object id 39\n",
+      "clour [0.41777778 0.47111111 0.93777778]\n",
+      "object id 40\n",
+      "clour [0.91111111 0.53333333 0.44444444]\n",
+      "object id 41\n",
+      "clour [0.48       0.87555556 0.67111111]\n",
+      "object id 100\n",
+      "clour [0.84888889 0.28       0.34666667]\n",
+      "object id 101\n",
+      "clour [0.32444444 0.80444444 0.40888889]\n",
+      "object id 102\n",
+      "clour [0.55555556 0.37333333 0.75555556]\n"
      ]
     }
    ],
@@ -434,9 +507,39 @@
     "colors = colors[:, [2, 1, 0]]  # Swap red and blue channels\n",
     "new_mesh.vertex_colors = o3d.utility.Vector3dVector(colors)\n",
     "\n",
+    "\"\"\" pointcloud pkl\n",
     "\n",
+    "\"\"\"\n",
+    "\n",
+    "#also access the ground truth pointclouds\n",
+    "pklfile = osp.join('/local/home/ekoller/R3Scan', 'files', 'orig', 'data', '{}.pkl'.format(new_scan_id))\n",
+    "\n",
+    "with open(pklfile, \"rb\") as f:\n",
+    "    # Load the data from the pickle file\n",
+    "    data = pickle.load(f)\n",
+    "    \n",
+    "    # Extract object points and IDs from the pickle data\n",
+    "    pointclouds = data['obj_points'][512]\n",
+    "    object_ids = data['objects_id']\n",
+    "    \n",
+    "    # Create a new point cloud object for the .pkl data\n",
+    "    pkl_point_cloud = o3d.geometry.PointCloud()\n",
+    "    obj_colors = get_id_colours(data_dir, new_scan_id)\n",
+    "    # Iterate over all the points and their object IDs\n",
+    "    for obj_id, points in zip(object_ids, pointclouds):\n",
+    "        # Assign a default color (e.g., black) to these objects\n",
+    "        print(\"object id\", obj_id)\n",
+    "        color = obj_colors[obj_id]/225.0\n",
+    "        print(\"clour\", obj_colors[obj_id]/225.0)\n",
+    "        # Create a point cloud for this object's points\n",
+    "        pcd = o3d.geometry.PointCloud()\n",
+    "        pcd.points = o3d.utility.Vector3dVector(points)\n",
+    "        pcd.colors = o3d.utility.Vector3dVector(np.tile(color, (points.shape[0], 1)))  # Assign the color\n",
+    "\n",
+    "        # Add this point cloud to the combined pkl_point_cloud\n",
+    "        pkl_point_cloud += pcd\n",
     "# Display both the mesh and point cloud together\n",
-    "o3d.visualization.draw_geometries([point_cloud, new_mesh], window_name=\"Mesh and Point Cloud Display\")\n",
+    "o3d.visualization.draw_geometries([point_cloud, pkl_point_cloud], window_name=\"Mesh and Point Cloud Display\")\n",
     "\n"
    ]
   },
