--- a/sceneGraph_update/visualization_pointclouds.ipynb
+++ b/sceneGraph_update/visualization_pointclouds.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "/local/home/ekoller/BT\n"
      ]
     }
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -100,21 +103,21 @@
     "    \n",
     "    return object_colors\n",
     "\n",
-    "colors = get_id_colours(data_dir,curr_scan_id)\n",
-    "print(\"cur scan id colors\", colors)\n",
-    "colors = get_id_colours(data_dir,new_scan_id)\n",
-    "print(\"new scan id colors\", colors.keys())"
+    "# colors = get_id_colours(data_dir,curr_scan_id)\n",
+    "# print(\"cur scan id colors\", colors)\n",
+    "# colors = get_id_colours(data_dir,new_scan_id)\n",
+    "# print(\"new scan id colors\", colors.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: {'center': array([-0.57435703,  1.85852646, -0.06962011]),\n",
+       "{0: {'center': array([[-0.4760977 ,  1.35325495,  0.0927426 ]]),\n",
        "  'points': array([[-0.43350216,  1.47394601,  0.37751036],\n",
        "         [-0.40853397,  1.17425119, -0.00435107],\n",
        "         [-0.37732428,  1.48571919,  0.3812295 ],\n",
@@ -125,7 +128,7 @@
        "  'votes': 16}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -169,34 +172,35 @@
      "output_type": "stream",
      "text": [
       "colors dict {13: array([247, 182, 210], dtype=uint8), 20: array([ 66, 188, 102], dtype=uint8), 1: array([174, 199, 232], dtype=uint8), 4: array([255, 127,  14], dtype=uint8), 100: array([191,  63,  78], dtype=uint8), 6: array([ 44, 160,  44], dtype=uint8), 14: array([227, 119, 194], dtype=uint8), 15: array([219, 219, 141], dtype=uint8), 18: array([ 23, 190, 207], dtype=uint8), 29: array([153,  98, 156], dtype=uint8), 5: array([152, 223, 138], dtype=uint8), 8: array([214,  39,  40], dtype=uint8), 16: array([188, 189,  34], dtype=uint8), 105: array([153, 101, 134], dtype=uint8), 0: array([0, 0, 0], dtype=uint8)}\n",
+      "hey object added 0\n",
       "object id 1\n",
-      "clour [0. 0. 0.]\n",
+      "clour [0.77333333 0.88444444 1.03111111]\n",
       "object id 4\n",
-      "clour [0. 0. 0.]\n",
+      "clour [1.13333333 0.56444444 0.06222222]\n",
       "object id 5\n",
-      "clour [0. 0. 0.]\n",
+      "clour [0.67555556 0.99111111 0.61333333]\n",
       "object id 6\n",
-      "clour [0. 0. 0.]\n",
+      "clour [0.19555556 0.71111111 0.19555556]\n",
       "object id 8\n",
-      "clour [0. 0. 0.]\n",
+      "clour [0.95111111 0.17333333 0.17777778]\n",
       "object id 105\n",
-      "clour [0. 0. 0.]\n",
+      "clour [0.68       0.44888889 0.59555556]\n",
       "object id 13\n",
-      "clour [0. 0. 0.]\n",
+      "clour [1.09777778 0.80888889 0.93333333]\n",
       "object id 14\n",
-      "clour [0. 0. 0.]\n",
+      "clour [1.00888889 0.52888889 0.86222222]\n",
       "object id 15\n",
-      "clour [0. 0. 0.]\n",
+      "clour [0.97333333 0.97333333 0.62666667]\n",
       "object id 16\n",
-      "clour [0. 0. 0.]\n",
+      "clour [0.83555556 0.84       0.15111111]\n",
       "object id 18\n",
-      "clour [0. 0. 0.]\n",
+      "clour [0.10222222 0.84444444 0.92      ]\n",
       "object id 20\n",
-      "clour [0. 0. 0.]\n",
+      "clour [0.29333333 0.83555556 0.45333333]\n",
       "object id 100\n",
-      "clour [0. 0. 0.]\n",
+      "clour [0.84888889 0.28       0.34666667]\n",
       "object id 29\n",
-      "clour [0. 0. 0.]\n"
+      "clour [0.68       0.43555556 0.69333333]\n"
      ]
     }
    ],
@@ -208,29 +212,34 @@
     "final_point_cloud = o3d.geometry.PointCloud()\n",
     "\n",
     "#colour\n",
-    "colors = get_id_colours(data_dir, new_scan_id)\n",
-    "print(\"colors dict\", colors)\n",
+    "obj_colors = get_id_colours(data_dir, new_scan_id)\n",
+    "print(\"colors dict\", obj_colors)\n",
     "\n",
     "# Iterate over all objects in all_centers\n",
     "for obj_id, data in all_centers.items():\n",
+    "    print(\"hey object added\" , obj_id)\n",
     "    points = data['points']  # Get points\n",
-    "    color = colors[obj_id]  # Generate a unique color for this object ID\n",
-    "    \n",
+    "    color = np.array(obj_colors[obj_id], dtype=np.float32)\n",
+    "    color = np.reshape(color, (3,))\n",
+    "    color = color / 255.0\n",
+    "\n",
+    "    #color = np.array(obj_colors[obj_id])/255.0 # Generate a unique color for this object ID\n",
+    "    #color = np.random.rand(3)\n",
     "    # Create a point cloud for the current object's points\n",
     "    point_cloud = o3d.geometry.PointCloud()\n",
     "    point_cloud.points = o3d.utility.Vector3dVector(points)\n",
     "    \n",
     "    # Create a color array of the same size as the number of points, and assign the same color to all points\n",
-    "    colors = np.tile(color, (points.shape[0], 1))  # Shape (num_points, 3)\n",
-    "    point_cloud.colors = o3d.utility.Vector3dVector(colors)\n",
+    "    #colors = np.tile(color, (points.shape[0], 1))  # Shape (num_points, 3)\n",
+    "    point_cloud.colors = o3d.utility.Vector3dVector(np.tile(color, (len(points), 1)))\n",
     "\n",
-    "    colors = np.asarray(point_cloud.colors)\n",
+    "    #colors = np.asarray(point_cloud.colors)\n",
     "    \n",
-    "    # Scale the colors by the brightness factor\n",
-    "    adjusted_colors = np.clip(colors * 1.3, 0, 1)  # Clip to ensure values are in the [0, 1] range\n",
+    "    # # Scale the colors by the brightness factor\n",
+    "    # adjusted_colors = np.clip(colors * 1.3, 0, 1)  # Clip to ensure values are in the [0, 1] range\n",
     "    \n",
     "    # Update the point cloud's colors\n",
-    "    point_cloud.colors = o3d.utility.Vector3dVector(adjusted_colors)\n",
+    "    # point_cloud.colors = o3d.utility.Vector3dVector(adjusted_colors)\n",
     "\n",
     "    # Add the current object's point cloud to the final point cloud\n",
     "    final_point_cloud += point_cloud\n",
@@ -255,8 +264,8 @@
     "    for obj_id, points in zip(object_ids, pointclouds):\n",
     "        # Assign a default color (e.g., black) to these objects\n",
     "        print(\"object id\", obj_id)\n",
-    "        color = colors[obj_id]\n",
-    "        print(\"clour\", colors[obj_id])\n",
+    "        color = obj_colors[obj_id]/225.0\n",
+    "        print(\"clour\", obj_colors[obj_id]/225.0)\n",
     "        # Create a point cloud for this object's points\n",
     "        pcd = o3d.geometry.PointCloud()\n",
     "        pcd.points = o3d.utility.Vector3dVector(points)\n",
@@ -276,7 +285,7 @@
     "combined_point_cloud = final_point_cloud + pkl_point_cloud\n",
     "\n",
     "# Visualize both together using Open3D\n",
-    "o3d.visualization.draw_geometries([point_cloud], window_name=\"Combined Point Clouds from Scan and PKL\")\n",
+    "o3d.visualization.draw_geometries([pkl_point_cloud + final_point_cloud], window_name=\"Combined Point Clouds from Scan and PKL\")\n",
     "\n",
     "\n",
     "\n",
